--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
+    "clear": "^0.1.0",
     "inquirer": "^6.3.1"
   },
   "devDependencies": {
